Add API Documentation to /appointment
