# clinic/models/dto/swagger_documentation.go
@@ -2,6 +2,12 @@ package dto
 
 import "clinic/models/entity"
 
+type SwLoginRes struct {
+	Code   int    `json:"code"`
+	Status string `json:"status"`
+	Data   string `json:"data"`
+}
+
 type SwUserRegisterRes struct {
 	Code   int          `json:"code"`
 	Status string       `json:"status"`
@@ -14,8 +20,26 @@ type SwEmployeeRegisterRes struct {
 	Data   entity.Employees `json:"data"`
 }
 
-type SwLoginRes struct {
-	Code   int    `json:"code"`
-	Status string `json:"status"`
-	Data   string `json:"data"`
+type SwCreateAppointmentRes struct {
+	Code   int                  `json:"code"`
+	Status string               `json:"status"`
+	Data   CreateAppointmentRes `json:"data"`
+}
+
+type SwCancelAppointmentRes struct {
+	Code   int            `json:"code"`
+	Status string         `json:"status"`
+	Data   AppointmentRes `json:"data"`
+}
+
+type SwConfirmAppointmentRes struct {
+	Code   int                `json:"code"`
+	Status string             `json:"status"`
+	Data   FullAppointmentRes `json:"data"`
+}
+
+type SwFinByEmailAppointmentRes struct {
+	Code   int                  `json:"code"`
+	Status string               `json:"status"`
+	Data   []FullAppointmentRes `json:"data"`
 }
